overflow fix

--- a/src/components/screens/projectsScreen/projects/form/css/formMain.scss
+++ b/src/components/screens/projectsScreen/projects/form/css/formMain.scss
@@ -575,7 +575,7 @@ input.submit {
 			padding: 20px;
 		}
 		.baseball-card-container {
-			overflow: unset;
+			overflow: hidden;
 		}
 	}
 
